@@ -25,6 +25,7 @@ Latest changes:
     * 7270: 
      * Option to add Annex A firmware into image
      * Fix flashing of firmwares > 8 MB over webinterface
+     * AVM Plugins can be reintegrated into firmware
     * Add volume counter (7240, 7270)
     * Fix wrong usb mounts status message in AVM webinterface (7170, 7270)
     * Add new status bar design (optional)
